[DataRowAddons]: fixed paddings, [PresetPanel]: fixed icon size and layout, [GlobalMenu]: align icon, [DropSpot]: fixed icon size, [Demo/Project Planning]: fixed icon size

--- a/uui/components/filters/PresetPanel/PresetActionsDropdown.module.scss
+++ b/uui/components/filters/PresetPanel/PresetActionsDropdown.module.scss
@@ -12,6 +12,14 @@
     }
 }
 
+.add-button {
+    width: 18px;
+    height: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .targetOpen {
     &:global(.uui-button-box) {
         :global(.uui-icon) {
